<resources>
    <string name="app_name">RealLifeAchievement</string>
    <string name="feed">Feed</string>
    <string name="done">Done</string>
    <string name="unlocked">Unlocked</string>
    <string name="search">Search</string>
    <string name="pinned">Pinned</string>
    <string name="statistic">Statistic</string>

    <string name="see_more">see more</string>
    <string name="hide">hide</string>

    <string name="long_text">1st RULE: You do not talk about FIGHT CLUB.\n2nd RULE: You DO NOT talk about FIGHT CLUB.\n3rd RULE: If someone says "stop" or goes limp, taps out the fight is over.\n4th RULE: Only two guys to a fight.\n5th RULE: One fight at a time.\n6th RULE: No shirts, no shoes.\n7th RULE: Fights will go on as long as they have to.\n8th RULE: If this is your first night at FIGHT CLUB, you HAVE to fight.\ntext\ntext\ntext\ntext\ntext\ntext\ntext\ntext\ntext\ntext\ntext\ntext
    </string>
    <string name="one_string_text">Hello darkness my old friend </string>
    <string name="short_text">
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.    </string>
    <string name="long_name">Really looooong name for achievement</string>
    <string name="add_achievement">Add achievement</string>
    <string name="empty_field_warning">Can\'t be empty</string>
    <string name="profile_statistic">Statistic</string>
    <string name="profile_pinned">Pinned</string>
    <string name="profile_unlocked">Unlocked</string>
    <string name="create_no_tags_error">You must add at least one tag</string>
    <string name="empty_content_warning">There is nothing to show.</string>

    <string name="story_status_started">Started</string>
    <string name="story_status_in_progress">In progress</string>
    <string name="story_status_finished">Finished</string>
    <string name="add_new_post">Add new post</string>
    <string name="set_as_finished">Set as finished</string>
    <string name="interesting_tags">Interesting tags:</string>
    <string name="your_story_title">Your story title</string>
    <string name="your_story">Your story</string>
    <string name="achievement_image">Achievement image</string>
    <string name="already_in_list_alert">This achievement already in your list</string>
    <string name="create_title">Create</string>

</resources>
