<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/lightGreen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/story_editor_title"
        style="@style/FullWidthEditText"
        android:background="@drawable/background_white_round_corners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/your_story_title"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        tools:text="My Title"
        />

    <EditText
        android:id="@+id/story_editor_content"
        style="@style/FullWidthEditText"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:background="@drawable/background_white_round_corners"
        android:gravity="start"
        android:hint="@string/your_story"
        android:inputType="textMultiLine|textCapSentences"
        tools:text="@string/short_text" />

    <LinearLayout
        android:id="@+id/story_editor_time_stamped_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp">
        <TextView
            android:id="@+id/story_editor_time_stamped"
            android:layout_width="01pt"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="09.10.2017"
            android:layout_weight="1"
            />
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_calendar_24dp"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/story_editor_camera"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_photo_camera_24dp" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/story_editor_attach"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_attach_file_24dp"
            />
        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/story_editor_completed"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_check_50dp" />
    </LinearLayout>
</LinearLayout>