<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    card_view:cardCornerRadius="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/story_achievement_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            card_view:layout_constraintLeft_toRightOf="@+id/story_achievement_image"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:text="@string/long_name" />

        <ImageView
            android:id="@+id/story_achievement_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/achievement"
            android:background="@drawable/background_log_post"
            card_view:layout_constraintBottom_toTopOf="@+id/achievement_description_short"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/border"
            style="@style/border"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintLeft_toRightOf="@+id/story_achievement_image"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/story_achievement_title"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/unlocked_label"
            style="@style/AchievementItemStatisticIcon"
            app:srcCompat="@drawable/ic_statistic_unlocked_24dp"
            card_view:layout_constraintTop_toTopOf="@+id/unlocked"
            android:layout_marginTop="0dp"
            card_view:layout_constraintBottom_toBottomOf="@+id/unlocked"
            android:layout_marginBottom="0dp"
            card_view:layout_constraintRight_toLeftOf="@+id/unlocked"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/unlocked"
            style="@style/AchievementItemIndicators"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            tools:text="999k"
            android:layout_marginRight="8dp"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintLeft_toRightOf="@+id/story_achievement_image"
            android:layout_marginLeft="8dp"
            card_view:layout_constraintHorizontal_bias="0.256"
            android:layout_marginTop="8dp"
            card_view:layout_constraintTop_toBottomOf="@+id/difficulty" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/difficulty_label"
            style="@style/AchievementItemStatisticIcon"
            app:srcCompat="@drawable/ic_statistic_difficulty_24dp"
            card_view:layout_constraintRight_toLeftOf="@+id/difficulty"
            android:layout_marginRight="8dp"
            card_view:layout_constraintBottom_toBottomOf="@+id/difficulty"
            card_view:layout_constraintTop_toTopOf="@+id/difficulty"/>

        <TextView
            android:id="@+id/difficulty"
            style="@style/AchievementItemIndicators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintLeft_toRightOf="@+id/story_achievement_image"
            card_view:layout_constraintRight_toRightOf="parent"
            tools:text="So hard"
            android:layout_marginTop="8dp"
            card_view:layout_constraintTop_toBottomOf="@+id/border" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/likes_label"
            style="@style/AchievementItemStatisticIcon"
            app:srcCompat="@drawable/ic_statistic_like_24dp"
            card_view:layout_constraintTop_toTopOf="@+id/likes"
            card_view:layout_constraintBottom_toBottomOf="@+id/likes"
            card_view:layout_constraintRight_toLeftOf="@+id/likes"
            android:layout_marginRight="8dp" />


        <TextView
            android:id="@+id/likes"
            style="@style/AchievementItemIndicators"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            card_view:layout_constraintLeft_toRightOf="@+id/unlocked"
            tools:text="999k"
            android:layout_marginRight="8dp"
            card_view:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            card_view:layout_constraintTop_toBottomOf="@+id/difficulty" />

        <TextView
            android:id="@+id/achievement_description_short"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:text="@string/short_text"
            tools:visibility="visible"
            android:layout_marginTop="8dp"
            card_view:layout_constraintTop_toBottomOf="@+id/unlocked_label" />

        <View
            android:id="@+id/story_border2"
            style="@style/border"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/achievement_description_short" />


        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/story_border2"
            card_view:layout_constraintHorizontal_bias="0.0">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/btn_visibility"
                android:layout_width="@dimen/small_icon_size"
                android:layout_height="@dimen/small_icon_size"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_thumb_up_24dp" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/btn_comments"
                android:layout_width="@dimen/small_icon_size"
                android:layout_height="@dimen/small_icon_size"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_comment_24dp" />

            <TextView
                android:id="@+id/txtbtn_see_more"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/see_more"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/btn_unlock"
                android:layout_width="@dimen/small_icon_size"
                android:layout_height="@dimen/small_icon_size"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_flag_24dp" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/btn_pin"
                android:layout_width="@dimen/small_icon_size"
                android:layout_height="@dimen/small_icon_size"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_pin_24dp" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>